--- a/assigments/pyproject.toml
+++ b/assigments/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "chainlit>=2.5.5",
+    "fastapi[standard]>=0.115.12",
     "openai-agents>=0.0.14",
 ]
 
